сделано получение данных и частичный внешний вид ячейки

--- a/Armageddon/Base.lproj/Main.storyboard
+++ b/Armageddon/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,9 +17,130 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UuL-sz-KxZ">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UuL-sz-KxZ">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AsteroidTableViewCell" rowHeight="321" id="7p6-ZA-EwS" customClass="AsteroidTableViewCell" customModule="Armageddon" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="321"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7p6-ZA-EwS" id="t2P-xR-ANu">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="321"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l5D-Uu-srS">
+                                                    <rect key="frame" x="20" y="11" width="374" height="299"/>
+                                                    <subviews>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9t3-A7-aeo">
+                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="140.5"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2021 QQ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jja-qT-Thd">
+                                                                    <rect key="frame" x="16" y="103.5" width="342" height="29"/>
+                                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="trailing" secondItem="jja-qT-Thd" secondAttribute="trailing" constant="16" id="7ae-dN-YWV"/>
+                                                                <constraint firstAttribute="bottom" secondItem="jja-qT-Thd" secondAttribute="bottom" constant="8" id="V36-6r-nGy"/>
+                                                                <constraint firstItem="jja-qT-Thd" firstAttribute="leading" secondItem="9t3-A7-aeo" secondAttribute="leading" constant="16" id="VSE-Ny-i2z"/>
+                                                            </constraints>
+                                                        </view>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ywC-c3-5fL">
+                                                            <rect key="frame" x="16" y="156.5" width="342" height="82.5"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Диаметр: 300м" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vBH-h6-OHc">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="123" height="22"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Подлетает 2 ноября 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sb7-Hn-G7o">
+                                                                    <rect key="frame" x="0.0" y="30" width="203.5" height="22.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="на расстояние 9 331 775 км" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJC-57-sYU">
+                                                                    <rect key="frame" x="0.0" y="60.5" width="221.5" height="22"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sGk-t1-u1U">
+                                                            <rect key="frame" x="16" y="255" width="342" height="28"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Оценка:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BKu-70-LRe">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="64.5" height="28"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="не опасен" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d1l-pc-oPX">
+                                                                    <rect key="frame" x="72.5" y="0.0" width="140.5" height="28"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" placeholderIntrinsicWidth="121" placeholderIntrinsicHeight="28" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K5X-oK-Lqe">
+                                                                    <rect key="frame" x="221" y="0.0" width="121" height="28"/>
+                                                                    <color key="backgroundColor" name="AccentColor"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="28" id="NV2-tZ-ybi"/>
+                                                                        <constraint firstAttribute="width" constant="121" id="l98-dd-PNK"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <inset key="titleEdgeInsets" minX="4" minY="0.0" maxX="4" maxY="0.0"/>
+                                                                    <state key="normal" title="УНИЧТОЖИТЬ">
+                                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    </state>
+                                                                    <userDefinedRuntimeAttributes>
+                                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                                            <integer key="value" value="14"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                    </userDefinedRuntimeAttributes>
+                                                                </button>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="9t3-A7-aeo" firstAttribute="height" secondItem="l5D-Uu-srS" secondAttribute="height" multiplier="0.47" id="1NC-PA-AN4"/>
+                                                        <constraint firstAttribute="bottom" secondItem="sGk-t1-u1U" secondAttribute="bottom" constant="16" id="3xH-JG-0gc"/>
+                                                        <constraint firstItem="9t3-A7-aeo" firstAttribute="leading" secondItem="l5D-Uu-srS" secondAttribute="leading" id="7aj-xG-B0E"/>
+                                                        <constraint firstAttribute="trailing" secondItem="sGk-t1-u1U" secondAttribute="trailing" constant="16" id="T43-3W-LuM"/>
+                                                        <constraint firstItem="9t3-A7-aeo" firstAttribute="top" secondItem="l5D-Uu-srS" secondAttribute="top" id="UXU-2R-2YM"/>
+                                                        <constraint firstItem="ywC-c3-5fL" firstAttribute="leading" secondItem="l5D-Uu-srS" secondAttribute="leading" constant="16" id="bbY-1T-gHb"/>
+                                                        <constraint firstItem="sGk-t1-u1U" firstAttribute="leading" secondItem="l5D-Uu-srS" secondAttribute="leading" constant="16" id="dO6-3B-K3s"/>
+                                                        <constraint firstItem="ywC-c3-5fL" firstAttribute="top" secondItem="9t3-A7-aeo" secondAttribute="bottom" constant="16" id="g4q-tE-GtX"/>
+                                                        <constraint firstItem="sGk-t1-u1U" firstAttribute="top" secondItem="ywC-c3-5fL" secondAttribute="bottom" constant="16" id="gf1-XM-aYz"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ywC-c3-5fL" secondAttribute="trailing" constant="16" id="ocL-2a-EX1"/>
+                                                        <constraint firstAttribute="trailing" secondItem="9t3-A7-aeo" secondAttribute="trailing" id="tx7-5Q-Zlw"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="l5D-Uu-srS" secondAttribute="bottom" id="BQ6-zl-PHn"/>
+                                                <constraint firstItem="l5D-Uu-srS" firstAttribute="leading" secondItem="t2P-xR-ANu" secondAttribute="leadingMargin" id="UHs-0j-rOP"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="l5D-Uu-srS" secondAttribute="trailing" id="bUM-5E-bTT"/>
+                                                <constraint firstItem="l5D-Uu-srS" firstAttribute="top" secondItem="t2P-xR-ANu" secondAttribute="topMargin" id="nDk-4b-wDe"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="destroyButton" destination="K5X-oK-Lqe" id="1lQ-HU-gDy"/>
+                                            <outlet property="diameterLabel" destination="vBH-h6-OHc" id="T5t-mS-FDf"/>
+                                            <outlet property="flightTimeLabel" destination="Sb7-Hn-G7o" id="KBz-Un-4zE"/>
+                                            <outlet property="gradeLabel" destination="d1l-pc-oPX" id="TZa-ug-gY4"/>
+                                            <outlet property="headerView" destination="9t3-A7-aeo" id="9jB-YY-WcO"/>
+                                            <outlet property="headerViewLabel" destination="jja-qT-Thd" id="aem-8C-zmy"/>
+                                            <outlet property="mainView" destination="l5D-Uu-srS" id="qxw-4I-ezi"/>
+                                            <outlet property="rangeLabel" destination="FJC-57-sYU" id="vWw-7c-1Oo"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -36,10 +158,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="142" y="102"/>
+            <point key="canvasLocation" x="140.57971014492756" y="101.78571428571428"/>
         </scene>
     </scenes>
     <resources>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
